# tourbox-macos

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: ARCHITECTURE.md  PROFILES.md  PROTOCOL.md
profiles/: default.json  developer.json
src/: test_tourbox.py
src/tourbox_macos/: __init__.py  driver.py
tests/: __init__.py  test_driver.py
